# robosense_ac_driver

./: .gitmodules  README.md  README_CN.md
src/modules/ac_driver/: CMakeLists.txt  README.md  README_CN.md  package.xml
src/modules/ac_driver/codec/: CMakeLists.txt
src/modules/ac_driver/codec/cmake/: srcs.cmake
src/modules/ac_driver/codec/include/hyper_vision/codec/: colorcodec.h  gpujpegdecoder.h  gpujpegencoder.h  jpegcoder.h  jpegcommon.h  nv12_rgb_yuv422.h  opencvjpegdecoder.h  opencvjpegencoder.h
src/modules/ac_driver/codec/include/hyper_vision/codec/libgpujpeg/: gpujpeg_version.h
src/modules/ac_driver/codec/src/: colorcodec.cpp  gpujpegdecoder.cpp  gpujpegencoder.cpp  jpegcoder.cpp  jpegcommon.cpp  nv12_rgb_yuv422.cu  opencvjpegdecoder.cpp  opencvjpegencoder.cpp
src/modules/ac_driver/codec/src/GPUJPEG/src/: gpujpeg_colorspace.h  gpujpeg_common.c  gpujpeg_common_internal.h  gpujpeg_decoder.c  gpujpeg_decoder_internal.h  gpujpeg_encoder.c  gpujpeg_encoder_internal.h  gpujpeg_preprocessor.h  gpujpeg_preprocessor_common.cuh  gpujpeg_reader.c  gpujpeg_reader.h  gpujpeg_table.h  gpujpeg_writer.c  gpujpeg_writer.h
src/modules/ac_driver/codec/src/GPUJPEG/src/utils/: image_delegate.c
src/modules/ac_driver/codec/test/: color_test.cpp  h265_test.cpp  jpeg_test.cpp
src/modules/ac_driver/conf/angle/: vector_dec_x_down.csv  vector_dec_x_up.csv  vector_dec_y_down.csv  vector_dec_y_up.csv  vector_dec_z_down.csv  vector_dec_z_up.csv
src/modules/ac_driver/devicemanager/: CMakeLists.txt
src/modules/ac_driver/devicemanager/cmake/: srcs.cmake
src/modules/ac_driver/devicemanager/include/hyper_vision/devicemanager/: devicemanager.h
src/modules/ac_driver/devicemanager/src/: devicemanager.cpp
src/modules/ac_driver/launch/: start_ac1.launch  start_ac1.launch.py  start_ac2_gmsl.launch  start_ac2_gmsl.launch.py  start_ac2_usb.launch  start_ac2_usb.launch.py
src/modules/ac_driver/log/: 说明.txt
src/modules/ac_driver/logmanager/: CMakeLists.txt
src/modules/ac_driver/logmanager/cmake/: srcs.cmake
src/modules/ac_driver/logmanager/include/hyper_vision/logmanager/: logmanager.h
src/modules/ac_driver/logmanager/src/: logmanager.cpp
src/modules/ac_driver/logmanager/test/: logmanager_test.cpp
src/modules/ac_driver/robosense_stereo_rectify/: CMakeLists.txt  README.md
src/modules/ac_driver/robosense_stereo_rectify/config/: 1111BEDC0028_calibration.yaml
src/modules/ac_driver/robosense_stereo_rectify/demo/: example.cpp
src/modules/ac_driver/robosense_stereo_rectify/include/: stereo_rectifier.h
src/modules/ac_driver/robosense_stereo_rectify/src/: stereo_rectifier.cpp
src/modules/ac_driver/rviz/: rviz.rviz  rviz2_config.rviz
src/modules/ac_driver/scripts/: AC_usb_permission.sh
src/modules/ac_driver/src/: calibmanager.hpp  convertmanager.hpp  metaS_node.cpp  rosmanager.hpp
src/modules/robosense_msgs/: CMakeLists.txt  package.xml
src/modules/robosense_msgs/msg/: RsACDeviceCalib.msg  RsACDeviceFactor.msg  RsHeader.msg  RsImage1M.msg  RsImage2M.msg  RsImage4M.msg  RsImage6M.msg  RsImage8M.msg  RsPointCloud1M.msg  RsPointCloud2M.msg  RsPointCloud4M.msg  RsPointCloud6M.msg  RsPointCloud8M.msg  RsPointField.msg
